# dockerized-haskell

./: Makefile  README.md  bootstrap.sh  docker-compose.yml  new-project.cabal
src/: NewProject.hs
src-exe/: Main.hs
test/: Main.hs
