cabal-version:      2.2
name:               new-project
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Agustin Jimenez
maintainer:         agustin.melomaniac@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  NewProject
  -- other-modules:
  -- other-extensions:
  build-depends:
      base ^>=4.18.2.1
  hs-source-dirs:   src
  default-language: Haskell2010

executable new-project
  import:           warnings
  main-is:          Main.hs
  tests:            True
  -- other-modules:
  -- other-extensions:

  build-depends:
      base ^>=4.18.2.1
    , new-project
  
  hs-source-dirs:   src-exe
  default-language: Haskell2010
  ghc-options: -O2 -split-sections

test-suite new-project-test
  import:           warnings
  default-language: Haskell2010
  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
      base ^>=4.18.2.1
    , new-project
    , tasty ^>= 1.5.2
    , tasty-hunit ^>= 0.10.2
